resources/manifest/deployment_token.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token
  namespace: "$(NAMESPACE)"
  labels:
    app: token
spec:
  replicas: 2
  selector:
    matchLabels:
      app: token
  template:
    metadata:
      labels:
        app: token
    spec:
      containers:
      - name: token
        image: "$(IMAGE_TOKEN)"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
