resources/manifest/deployment_user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: "$(NAMESPACE)"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      serviceAccountName: user
      nodeSelector:
        eks.amazonaws.com/nodegroup: "$(NODEGROUP_NAME)"
      containers:
      - name: user
        image: "$(IMAGE_USER)"
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
          limits:
            cpu: "500m"
            memory: "1Gi"
