resources/manifest/service_token.yaml
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: "$(NAMESPACE)"
spec:
  selector:
    app: token
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
