resources/manifest/service_user.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(SERVICE_NAME)
  namespace: $(NAMESPACE)
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: user
