resources/manifest/ingress_user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user
  namespace: $(NAMESPACE)
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: $(ALB_NAME)
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: $(SERVICE_NAME)
              port:
                number: 80
